# jnpa-uc3-poc

./: .dockerignore  .env  .env.aws.example  .env.local.example  .gitignore  .prettierignore  API_CONTRACT_REPORT.md  AWS_DEPLOYMENT.md  CLAUDE_CODE_PROMPT_UC3_TrafficDecongestion.md  FIX_PLAN.md  GAP_REPORT.md  Makefile  PWA_DASHBOARD_ALIGNMENT_REPORT.md  README.md  docker-compose.aws.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ai/: _placeholder.md
ai/anomaly/: Dockerfile  README.md  __init__.py  app.py  cameras.py  config.py  engine.py  evidence.py  metrics.py  motion.py  pyproject.toml  route_lookup.py  sink.py  storage.py  synthetic.py  train.py  types.py  workers.py
ai/anomaly/autoencoder/: __init__.py  features.py  model.py
ai/anomaly/rules/: __init__.py  abandoned.py  parking.py  route_deviation.py  wrongway.py
ai/anomaly/track/: __init__.py  bytetrack.py
ai/anpr/: Dockerfile  README.md  pyproject.toml
ai/anpr/eval/: bench.py
ai/anpr/resources/: state_codes.txt
ai/anpr/src/anpr/: __init__.py  app.py  config.py  degradation.py  detect.py  evaluator.py  finetune.py  metrics.py  ocr.py  pipeline.py  plategen.py  postprocess.py  storage.py
ai/congestion/: Dockerfile  README.md  Train_Congestion_Colab.ipynb  __init__.py  config.py  eval_report.py  features.py  graph.py  infer.py  metrics.py  model.py  pyproject.toml  storage.py  synthetic.py  train.py
ai/congestion/artifacts/: congestion_gnn_lstm.pt  metrics.json
ai/congestion/sources/: __init__.py  base.py  google.py  here.py  manager.py  tomtom.py
carbon/: Dockerfile  README.md  __init__.py  app.py  calculator.py  config.py  factors.py  metrics.py  pyproject.toml
deploy/: .env.prod.example  AWS_DEPLOY_GUIDE.md  README.md  docker-compose.prod.yml  ec2-user-data.sh  jnpa-uc3.sh
docs/: 3D_MAP_INTEGRATION_REPORT.md  ASSUMPTIONS.md  AUDIT_PERSISTENCE_DATAFLOW.md  AUDIT_PERSISTENCE_ER.md  AUDIT_PERSISTENCE_TEST_REPORT.md  BERTHING_PDF_DATA_AUDIT.md  CARGO_API.md  COVERAGE.md  CUSTOMS_ICEGATE_ADAPTER.md  CUSTOMS_MODULE.md  DEMO_RUNBOOK.md  DEPLOYMENT_VERIFICATION_REPORT.md  IDENTITY_PRODUCTION.md  JNPA_UC3_ClaudeCode_Prompts.md  KPI_DEFINITIONS.md  PHASE2_CUSTOMS_GATE_REPORT.md  PHASE2_GEOFENCE_AI_REPORT.md  PHASE2_PARKING_CONTAINER_REPORT.md  PHASE2_TRACK4_5_REPORT.md  PHASE3_MOBILE_HARDENING_REPORT.md  RELEASE_SCHEMA_V3.md  REMEDIATION_CHANGELOG.md  SHIPPING_LINES_MODULE.md  UC2_LIFECYCLE_HANDOVER_REPORT.md  UC3_API_AUDIT.md  UC3_PRODUCTION_AUDIT.md  UC3_PWA_AUDIT_REPORT.md  UC3_Production_Readiness_Checklist.md  new_JNPA_UC3_Production_Audit_Checklist.md
empty-container/: Dockerfile  README.md  __init__.py  app.py  config.py  metrics.py  optimizer.py  persistence.py  pyproject.toml  seed.py
evidence/: .gitignore
gate-data/: Dockerfile  README.md  __init__.py  app.py  config.py  customs_adapter.py  icegate_sim.py  leo.py  metrics.py  persistence.py  providers.py  pyproject.toml  seed.py
gateway/: Dockerfile  README.md  __init__.py  _placeholder.md  audit.py  audit_client.py  auth.py  berthing_ext.py  cache.py  cfs_ecy_ext.py  config.py  customs_ext.py  dpdp.py  enforcement.py  enrollment.py  fallback.py  firebase.py  fleet.py  geofence.py  integrations.py  logging.py  main.py  metrics.py  mode.py  notifications.py  objectstore.py  performance_ext.py  performance_upload_ext.py  provisional.py  pumps.py  pyproject.toml  shipping_lines_ext.py  sms.py  state.py  tas_mock.py  td_upload_ext.py  uc3_ext.py  vehicle_intel.py  ws.py
gateway/routers/: __init__.py  accidents.py  ai_events.py  alerts.py  anpr.py  auth.py  berthing.py  bottlenecks.py  camera_ai.py  carbon.py  cargo.py  cfs_ecy.py  checkin.py  control.py  customs.py  debug.py  document_ocr.py  double_trip.py  driver.py  drivers_master.py  empty_container.py  evidence.py  fastag.py  gate_data.py  geo.py  identity.py  journey.py  kpi.py  ldb.py  meta.py  notifications.py  nvr.py  otp.py  parking.py  pdp.py  performance.py  performance_upload.py  push.py  reefer.py  reports.py  (+16 more)
identity/: Dockerfile  README.md  __init__.py  app.py  config.py  embeddings.py  gallery.py  metrics.py  pyproject.toml  quality.py
ingest/: _placeholder.md
ingest/anpr/: Dockerfile  README.md  pyproject.toml
ingest/anpr/src/anpr_ingest/: __init__.py  config.py  detect.py  emit.py  evidence_store.py  main.py  metrics.py  replay.py  weather.py
ingest/rfid/: Dockerfile  README.md  consumer.py  correlator.py  emulator.py  pyproject.toml
ingest/rfid/rfid_ingest/: __init__.py  config.py  metrics.py  mqtt_io.py  topology.py
ingest/trucking_app/: Dockerfile  README.md  app.py  pyproject.toml
ingest/trucking_app/trucking_app/: __init__.py  config.py  fleet.py  gates.py  metrics.py  plates.py  routing.py  simulator.py  sinks.py  truck.py
ingest/vahan_live/: Dockerfile  README.md  __init__.py  app.py  config.py  mappers.py  pyproject.toml
ingest/vahan_sim/: Dockerfile  README.md  __init__.py  app.py  config.py  metrics.py  pyproject.toml  seed.py
mobile-pwa/: .env.example  .eslintrc.cjs  .gitignore  README.md  _placeholder.md  _sweep.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
parking/: Dockerfile  README.md  __init__.py  app.py  config.py  facilities.py  metrics.py  persistence.py  pyproject.toml
scenarios/: Dockerfile  README.md  __init__.py  _placeholder.md  base.py  config.py  handle.py  monsoon_friday.py  pyproject.toml  runner.py  tfc1.py  tfc2.py  tfc3.py  uc2_bridge.py
scripts/: __init__.py  _screenshot.mjs  _synth_clip.py  bootstrap_check.py  build_evidence.py  demo_drive.py  demo_reset.py  download_anpr_samples.sh  download_anpr_weights.sh  fetch_face_model.sh  gen_vapid_keys.py  import_berthing_reports.py  import_customs.py  (+22 more)
shared/: README.md  assumptions.json  pyproject.toml
shared/jnpa_shared/: __init__.py  assumptions.py  backbone.py  cloudevents.py  config.py  corridor.py  db.py  fastag.py  frame_bus.py  iso6346.py  kafka_io.py  kpi.py  logging.py  redis_io.py  schemas.py  tracing.py  vahan_db.py
(+403 files in other folders)
