[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon"
version = "0.1.0"
description = "Carbon-emissions calculator (Appendix C #6) for trailers in the JNPA UC-III Area of Interest"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "JNPA Digital Twin Team" }]

dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "prometheus-client==0.21.*",
    "pydantic==2.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
    "httpx==0.27.*",
]

[project.scripts]
carbon = "carbon.app:run"

[tool.setuptools]
# The package directory IS this folder (carbon/), imported as `carbon` with the
# repo root on PYTHONPATH (mirrors the compose bind mount).
packages = ["carbon"]
package-dir = { "carbon" = "." }

[tool.pytest.ini_options]
asyncio_mode = "auto"
