[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gate-data"
version = "0.1.0"
description = "Gate-data capture + Auto-LEO reconciliation service for the JNPA UC-III PoC"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "JNPA Digital Twin Team" }]

dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "prometheus-client==0.21.*",
    "pydantic==2.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
    "httpx==0.27.*",
]

[project.scripts]
gate-data = "gate_data.app:run"
gate-data-seed = "gate_data.seed:main"

[tool.setuptools]
# The package directory IS this folder (gate-data), imported as `gate_data`
# with the repo root on PYTHONPATH (mirrors the compose bind mount).
packages = ["gate_data"]
package-dir = { "gate_data" = "." }

[tool.pytest.ini_options]
asyncio_mode = "auto"
