[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jnpa-gateway"
version = "0.1.0"
description = "API gateway + fallback orchestrator + provisional-vehicle flow for the JNPA UC-III Digital Twin PoC (Sub-Criterion 3)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "JNPA Digital Twin Team" }]

dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "prometheus-client==0.21.*",
    "pydantic==2.*",
    "httpx==0.27.*",
    "websockets==13.*",
    "aiomqtt==2.*",
    "python-multipart==0.0.*",
    # JWT bearer auth (Wave 3 / SEC-2). gateway/auth.py uses PyJWT when present
    # and falls back to a stdlib HS256 verifier so the test suite needs no extra
    # install; production images get the vetted library via this pin.
    "pyjwt==2.*",
    # WebPush delivery for the trucking-app PWA re-route notifications
    # (/api/push). Imported lazily; push degrades to WS/polling if absent.
    "pywebpush==2.*",
    # Server-side PDF rendering for /api/reports/police?format=pdf. The Chromium
    # browser binary is installed in the Dockerfile (`playwright install`).
    "playwright==1.47.*",
    # S3/MinIO client for driver-enrolment reference photos (gateway/objectstore).
    # Imported lazily; enrolment degrades to base64-in-Postgres if absent/unreachable.
    "minio==7.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
]

[project.scripts]
jnpa-gateway = "gateway.main:run"

[tool.setuptools]
# The package directory IS this folder (gateway/), imported as `gateway` with
# the repo root on PYTHONPATH (mirrors the compose bind mount + PYTHONPATH=/app).
packages = [
    "gateway",
    "gateway.routers",
]
package-dir = { "gateway" = "." }

[tool.pytest.ini_options]
asyncio_mode = "auto"
