[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parking"
version = "0.1.0"
description = "Real-time parking-availability service (Appendix C #1) for the geo-fenced JNPA UC-III port area"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "JNPA Digital Twin Team" }]

dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "prometheus-client==0.21.*",
    "pydantic==2.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
    "httpx==0.27.*",
]

[project.scripts]
parking = "parking.app:run"

[tool.setuptools]
# The package directory IS this folder (parking/), imported as `parking` with
# the repo root on PYTHONPATH (mirrors the compose bind mount).
packages = ["parking"]
package-dir = { "parking" = "." }

[tool.pytest.ini_options]
asyncio_mode = "auto"
